==> jibarra64/Adafruit_nRF52_Arduino/libraries/RTClib/src/RTClib.cpp <==
#include "RTClib.h"
#include <TinyWireM.h>
#define Wire TinyWireM
#include <Wire.h>
#include <avr/pgmspace.h>
#include <pgmspace.h>
#define PROGMEM
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#define Wire Wire1
#define _I2C_WRITE write ///< Modern I2C write
#define _I2C_READ read   ///< Modern I2C read
#include <WProgram.h>
#define _I2C_WRITE send   ///< Legacy I2C write
#define _I2C_READ receive ///< legacy I2C read

boolean RTC_DS1307::begin(TwoWire *wireInstance) {
  RTCWireBus = wireInstance;
  RTCWireBus->begin();
  RTCWireBus->beginTransmission(DS1307_ADDRESS);
  if (RTCWireBus->endTransmission() == 0)
    return true;
  return false;
}

void RTC_DS1307::adjust(const DateTime &dt) {
  RTCWireBus->beginTransmission(DS1307_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)0); // start at location 0
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.second()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.minute()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.hour()));
  RTCWireBus->_I2C_WRITE(bin2bcd(0));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.day()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.month()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.year() - 2000U));
  RTCWireBus->endTransmission();
}

DateTime RTC_DS1307::now() {
  RTCWireBus->beginTransmission(DS1307_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)0);
  RTCWireBus->endTransmission();

  RTCWireBus->requestFrom(DS1307_ADDRESS, 7);
  uint8_t ss = bcd2bin(RTCWireBus->_I2C_READ() & 0x7F);
  uint8_t mm = bcd2bin(RTCWireBus->_I2C_READ());
  uint8_t hh = bcd2bin(RTCWireBus->_I2C_READ());
  RTCWireBus->_I2C_READ();
  uint8_t d = bcd2bin(RTCWireBus->_I2C_READ());
  uint8_t m = bcd2bin(RTCWireBus->_I2C_READ());
  uint16_t y = bcd2bin(RTCWireBus->_I2C_READ()) + 2000U;

  return DateTime(y, m, d, hh, mm, ss);
}

void RTC_Millis::adjust(const DateTime &dt) {
  lastMillis = millis();
  lastUnix = dt.unixtime();
}

DateTime RTC_Millis::now() {
  uint32_t elapsedSeconds = (millis() - lastMillis) / 1000;
  lastMillis += elapsedSeconds * 1000;
  lastUnix += elapsedSeconds;
  return lastUnix;
}

void RTC_Micros::adjust(const DateTime &dt) {
  lastMicros = micros();
  lastUnix = dt.unixtime();
}

DateTime RTC_Micros::now() {
  uint32_t elapsedSeconds = (micros() - lastMicros) / microsPerSecond;
  lastMicros += elapsedSeconds * microsPerSecond;
  lastUnix += elapsedSeconds;
  return lastUnix;
}

boolean RTC_PCF8523::begin(TwoWire *wireInstance) {
  RTCWireBus = wireInstance;
  RTCWireBus->begin();
  RTCWireBus->beginTransmission(PCF8523_ADDRESS);
  if (RTCWireBus->endTransmission() == 0)
    return true;
  return false;
}

void RTC_PCF8523::adjust(const DateTime &dt) {
  RTCWireBus->beginTransmission(PCF8523_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)3); // start at location 3
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.second()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.minute()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.hour()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.day()));
  RTCWireBus->_I2C_WRITE(bin2bcd(0)); // skip weekdays
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.month()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.year() - 2000U));
  RTCWireBus->endTransmission();

  // set to battery switchover mode
  RTCWireBus->beginTransmission(PCF8523_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)PCF8523_CONTROL_3);
  RTCWireBus->_I2C_WRITE((byte)0x00);
  RTCWireBus->endTransmission();
}

DateTime RTC_PCF8523::now() {
  RTCWireBus->beginTransmission(PCF8523_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)3);
  RTCWireBus->endTransmission();

  RTCWireBus->requestFrom(PCF8523_ADDRESS, 7);
  uint8_t ss = bcd2bin(RTCWireBus->_I2C_READ() & 0x7F);
  uint8_t mm = bcd2bin(RTCWireBus->_I2C_READ());
  uint8_t hh = bcd2bin(RTCWireBus->_I2C_READ());
  uint8_t d = bcd2bin(RTCWireBus->_I2C_READ());
  RTCWireBus->_I2C_READ(); // skip 'weekdays'
  uint8_t m = bcd2bin(RTCWireBus->_I2C_READ());
  uint16_t y = bcd2bin(RTCWireBus->_I2C_READ()) + 2000U;

  return DateTime(y, m, d, hh, mm, ss);
}

boolean RTC_PCF8563::begin(TwoWire *wireInstance) {
  RTCWireBus = wireInstance;
  RTCWireBus->begin();
  RTCWireBus->beginTransmission(PCF8563_ADDRESS);
  if (RTCWireBus->endTransmission() == 0)
    return true;
  return false;
}

void RTC_PCF8563::adjust(const DateTime &dt) {

  RTCWireBus->beginTransmission(PCF8563_ADDRESS);
  RTCWireBus->_I2C_WRITE(PCF8563_VL_SECONDS); // start at location 2, VL_SECONDS
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.second()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.minute()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.hour()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.day()));
  RTCWireBus->_I2C_WRITE(bin2bcd(0)); // skip weekdays
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.month()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.year() - 2000));
  RTCWireBus->endTransmission();
}

DateTime RTC_PCF8563::now() {
  RTCWireBus->beginTransmission(PCF8563_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)2);
  RTCWireBus->endTransmission();

  RTCWireBus->requestFrom(PCF8563_ADDRESS, 7);
  uint8_t ss = bcd2bin(RTCWireBus->_I2C_READ() & 0x7F);
  uint8_t mm = bcd2bin(RTCWireBus->_I2C_READ() & 0x7F);
  uint8_t hh = bcd2bin(RTCWireBus->_I2C_READ() & 0x3F);
  uint8_t d = bcd2bin(RTCWireBus->_I2C_READ() & 0x3F);
  RTCWireBus->_I2C_READ(); // skip 'weekdays'
  uint8_t m = bcd2bin(RTCWireBus->_I2C_READ() & 0x1F);
  uint16_t y = bcd2bin(RTCWireBus->_I2C_READ()) + 2000;

  return DateTime(y, m, d, hh, mm, ss);
}

boolean RTC_DS3231::begin(TwoWire *wireInstance) {
  RTCWireBus = wireInstance;
  RTCWireBus->begin();
  RTCWireBus->beginTransmission(DS3231_ADDRESS);
  if (RTCWireBus->endTransmission() == 0)
    return true;
  return false;
}

void RTC_DS3231::adjust(const DateTime &dt) {
  RTCWireBus->beginTransmission(DS3231_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)DS3231_TIME); // start at location 0
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.second()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.minute()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.hour()));
  // The RTC must know the day of the week for the weekly alarms to work.
  RTCWireBus->_I2C_WRITE(bin2bcd(dowToDS3231(dt.dayOfTheWeek())));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.day()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.month()));
  RTCWireBus->_I2C_WRITE(bin2bcd(dt.year() - 2000U));
  RTCWireBus->endTransmission();

  uint8_t statreg =
      read_i2c_register(DS3231_ADDRESS, DS3231_STATUSREG, RTCWireBus);
  statreg &= ~0x80; // flip OSF bit
  write_i2c_register(DS3231_ADDRESS, DS3231_STATUSREG, statreg, RTCWireBus);
}

DateTime RTC_DS3231::now() {
  RTCWireBus->beginTransmission(DS3231_ADDRESS);
  RTCWireBus->_I2C_WRITE((byte)0);
  RTCWireBus->endTransmission();

  RTCWireBus->requestFrom(DS3231_ADDRESS, 7);
  uint8_t ss = bcd2bin(RTCWireBus->_I2C_READ() & 0x7F);
  uint8_t mm = bcd2bin(RTCWireBus->_I2C_READ());
  uint8_t hh = bcd2bin(RTCWireBus->_I2C_READ());
  RTCWireBus->_I2C_READ();
  uint8_t d = bcd2bin(RTCWireBus->_I2C_READ());
  uint8_t m = bcd2bin(RTCWireBus->_I2C_READ());
  uint16_t y = bcd2bin(RTCWireBus->_I2C_READ()) + 2000U;

  return DateTime(y, m, d, hh, mm, ss);
}

boolean RTC_nRF52::begin(void) {
	nrf_rtc_int_enable(NRF_RTCZ, NRF_RTC_INT_OVERFLOW_MASK);
	nrf_rtc_event_enable(NRF_RTCZ, NRF_RTC_EVENT_OVERFLOW);
	nrf_rtc_prescaler_set(NRF_RTCZ, RTC_FREQ_TO_PRESCALER(8)); // 8 Hz
	nrf_rtc_task_trigger(NRF_RTCZ, NRF_RTC_TASK_START);
	return true;
}

void RTC_nRF52::adjust(const DateTime &dt) {
	uint32_t elapsedSeconds = nrf_rtc_counter_get(NRF_RTCZ) >> 0x3;

	lastUnix = dt.unixtime() - elapsedSeconds;

	if (nrf_rtc_event_check(NRF_RTCZ, NRF_RTC_EVENT_OVERFLOW)) {
		nrf_rtc_event_clear(NRF_RTCZ, NRF_RTC_EVENT_OVERFLOW);
		lastUnix += NRF_RTC_OVERFLOW_SEC;
	}
}

DateTime RTC_nRF52::now(void) {
	uint32_t elapsedSeconds = nrf_rtc_counter_get(NRF_RTCZ) >> 0x3;

	if (nrf_rtc_event_check(NRF_RTCZ, NRF_RTC_EVENT_OVERFLOW)) {
		nrf_rtc_event_clear(NRF_RTCZ, NRF_RTC_EVENT_OVERFLOW);
		lastUnix += NRF_RTC_OVERFLOW_SEC;
	}

	return lastUnix + elapsedSeconds;
}

boolean RTC_nRFX::begin(void) {
		
	rtcPointer = this;
		
	nrfx_rtc_config_t config = NRFX_RTC_DEFAULT_CONFIG;
	config.prescaler = RTC_FREQ_TO_PRESCALER(8); // 8 Hz
	
	rtc = NRFX_RTC_INSTANCE(2);
	
	nrfx_rtc_init(&rtc, &config, rtc_handler);
	
	nrfx_rtc_overflow_enable(&rtc, true);
	
	nrfx_rtc_enable(&rtc);
	
	return true;
}

void RTC_nRFX::adjust(const DateTime &dt) {
	uint32_t elapsedSeconds = nrfx_rtc_counter_get(&rtc) >> 0x3;
	lastUnix = dt.unixtime() - elapsedSeconds;
}

DateTime RTC_nRFX::now(void) {
	uint32_t elapsedSeconds = nrfx_rtc_counter_get(&rtc) >> 0x3;
	return lastUnix + elapsedSeconds;
}
